# website

./: .gitignore  Dockerfile  README.md
.github/workflows/: main.yml
back/: Cargo.toml
back/src/: main.rs
front/: index.html  tailwind.config.js  tailwind_watcher.css
front/src/: Main.elm  Markdown.elm  Styles.elm
