[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "6.4.2"
salvo = { version = "0.37.3", features = ["serve-static"] }
tokio = {version = "1.21.2", features = ["full"]}
